# CIRISProxy

./: .coverage  .env.example  .gitignore  .gitmodules  CLAUDE.md  Dockerfile  LICENSE  README.md  RELEASE_NOTES.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  litellm_config.yaml  pyproject.toml  server.py  sonar-project.properties
.github/workflows/: deploy.yml  sonarcloud.yml
docs/: DEPLOYMENT.md  INTEGRATION_GUIDE.md
hooks/: __init__.py  billing_callback.py  custom_auth.py  search_handler.py  status_handler.py
libs/: __init__.py
nginx/: default-init.conf  default.conf
scripts/: entrypoint.sh  healthcheck.py  init-letsencrypt.sh  preprocess_config.py
sdk/: __init__.py  logshipper.py
tests/: __init__.py  conftest.py  mock_billing_server.py  test_billing_callback.py  test_custom_auth.py  test_logshipper.py  test_preprocess_config.py  test_search_handler.py  test_server.py  test_status_handler.py
tools/analysis/: sonar.py
