[project]
name = "ciris-proxy"
version = "0.1.0"
description = "LiteLLM-based proxy service for credit-gated LLM access"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "litellm>=1.40.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "respx>=0.21.0",  # Mock httpx requests
    "hypothesis>=6.100.0",  # Property-based testing
    "ruff>=0.4.0",
    "fastapi>=0.100.0",  # For testing custom_auth hook
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hooks"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]  # Line too long - handled by formatter

[tool.coverage.run]
source = ["hooks"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
